# tbfw

./: .gitignore  CMakeLists.txt  README.md
scenes/3Dcubes/: main.cpp
scenes/3Dcubes/shaders/: shader.vs
scenes/3dModelLoading/: main.cpp
scenes/3dScene_with_Cam/: main.cpp
scenes/cppLights/: main.cpp
scenes/cppLights/shaders/: lightingShader.fs
scenes/normalMapping/: main.cpp
scenes/spotLight/: main.cpp
scenes/spotLight/shaders/: directionalLight.fs  lampShader.fs  lightingShader.fs  shader.fs
scenes/spot_dir_pointLightAllIneOne/: main.cpp
scenes/spot_dir_pointLightAllIneOne/shaders/: lightingShader.fs  vertex.vs
start/: main.cpp
tbfw/: OBJloader.cpp  OBJloader.h  camera.cpp  camera.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
tbfw/shaders/: vertex.vs
